[gd_scene load_steps=16 format=3 uid="uid://bnem326w5gtdo"]

[ext_resource type="Script" uid="uid://cotw5u0uj4mgp" path="res://scenes/world/world.gd" id="1_8kgbe"]
[ext_resource type="PackedScene" uid="uid://bll4jju1dg7lx" path="res://scenes/bg/world_background.tscn" id="1_oc07d"]
[ext_resource type="PackedScene" uid="uid://tiyofvv12bt" path="res://scenes/player/player.tscn" id="2_hqj2o"]
[ext_resource type="AudioStream" uid="uid://ce1l2f6b8jyu6" path="res://music/SHUANG SHENG双笙 KOKORONASHI(心做し) LYRICS (JPNROMENG).mp3" id="2_kwlg7"]
[ext_resource type="PackedScene" uid="uid://b5c6vjvqg8rka" path="res://scenes/player/companion_2.tscn" id="6_41qtv"]
[ext_resource type="PackedScene" uid="uid://d1scpl0sgmumr" path="res://scenes/lyrics/lyrics.tscn" id="6_dg8lu"]
[ext_resource type="PackedScene" uid="uid://wn6bgh34ibku" path="res://scenes/player/companion_1.tscn" id="6_nkfsu"]
[ext_resource type="Script" uid="uid://cm727leeho02i" path="res://scenes/world/Area2D.gd" id="7_54tnw"]
[ext_resource type="Texture2D" uid="uid://b2mki1d38rrhu" path="res://sprites/backgrounds/black_screen.jpg" id="7_cgn1m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rd6op"]
radius = 69.0
height = 1294.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7e0fg"]
radius = 69.0
height = 824.0

[sub_resource type="Animation" id="Animation_bv8bq"]
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.8, 3.8, 4.8),
"transitions": PackedFloat32Array(1, 1, 1, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.941176), Color(1, 1, 1, 0.627451), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_skl3h"]
resource_name = "blackscreen"
length = 4.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03, 2.8, 3.8, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.815686), Color(1, 1, 1, 0.462745), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3j2p7"]
resource_name = "start"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgq3m"]
_data = {
&"RESET": SubResource("Animation_bv8bq"),
&"blackscreen": SubResource("Animation_skl3h"),
&"start": SubResource("Animation_3j2p7")
}

[node name="World" type="Node2D"]
script = ExtResource("1_8kgbe")

[node name="WorldBackground" parent="." instance=ExtResource("1_oc07d")]

[node name="Kokoronashi" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_kwlg7")
autoplay = true

[node name="MeteorDeletor" type="Area2D" parent="."]
script = ExtResource("7_54tnw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MeteorDeletor"]
position = Vector2(-45.4858, -54.9946)
polygon = PackedVector2Array(1596.49, -72.0054, -168.514, -72.0054, -149.514, 953.995, 1683.49, 979.995, 1729.49, 1038.99, -208.514, 1038.99, -231.514, -123.005, 1712.49, -154.005)

[node name="Callabler" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
autostart = true

[node name="MovementLimiter" type="StaticBody2D" parent="."]
light_mask = 2
position = Vector2(3.05176e-05, 6.10352e-05)
collision_layer = 4

[node name="Up" type="CollisionShape2D" parent="MovementLimiter"]
light_mask = 2
position = Vector2(638, -16)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_rd6op")
one_way_collision_margin = 13.9
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Left" type="CollisionShape2D" parent="MovementLimiter"]
light_mask = 2
position = Vector2(10, 332)
rotation = 3.14159
shape = SubResource("CapsuleShape2D_7e0fg")
one_way_collision_margin = 13.9
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Right" type="CollisionShape2D" parent="MovementLimiter"]
light_mask = 2
position = Vector2(1266, 332)
rotation = 3.14159
shape = SubResource("CapsuleShape2D_7e0fg")
one_way_collision_margin = 13.9
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Down" type="CollisionShape2D" parent="MovementLimiter"]
light_mask = 2
position = Vector2(644, 728)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_rd6op")
one_way_collision_margin = 13.9
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Player" parent="." instance=ExtResource("2_hqj2o")]
position = Vector2(324, 263)
collision_mask = 7

[node name="Companion1" parent="." instance=ExtResource("6_nkfsu")]

[node name="BlackScreen" type="Sprite2D" parent="."]
top_level = true
light_mask = 0
position = Vector2(637, 364)
scale = Vector2(1.6475, 1.67556)
texture = ExtResource("7_cgn1m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlackScreen"]
libraries = {
&"": SubResource("AnimationLibrary_rgq3m")
}

[node name="Lyrics" parent="." instance=ExtResource("6_dg8lu")]
top_level = true
position = Vector2(640, 664)

[node name="Companion2" parent="." instance=ExtResource("6_41qtv")]

[connection signal="body_entered" from="MeteorDeletor" to="MeteorDeletor" method="_on_body_entered"]
[connection signal="timeout" from="Callabler" to="." method="_on_callabler_timeout"]
